add image component

--- a/index.scss
+++ b/index.scss
@@ -53,3 +53,12 @@ $tabs-link-active-color: #fff;
         animation-duration: 500ms;
     }
 }
+
+// for examples
+.image_example {
+    border: 1px solid blue;
+}
+
+.image_figure_example {
+    border: 1px solid red;
+}
